--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^1.0.0-rc.1",
     "@material-ui/icons": "^1.0.0-beta.43",
     "google-map-react": "^1.0.3",
+    "google-maps-react": "^2.0.2",
     "material-ui": "^1.0.0-beta.45",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
